Added "Usage" section to the README.md